@@ -458,7 +458,7 @@ each room.
 
 LIST_AREA=\
 Command  : LIST\n\r\
-Usage    : LIST AREA (ROOM/MOB/ITEM/MOBMASK/ITEMMASK) ([MASK])\n\r\
+Usage    : LIST AREA (ROOM/MOB/ITEM/SHOPS/MOBMASK/ITEMMASK) ([MASK])\n\r\
 Example  : list area\n\r\
 Example  : list area mob creeper\n\r\
 Example  : list area mobmask -race +elf\n\r\
